ZZ-UI-005: Ueberarbeite Kioskreihe und Session-Timeout
